Adjusted css on my backed projects and added validation to project form to prevent title text from being too long to preserve the existing css

--- a/react-app/src/components/MyBackedProjects/MyBackedProjects.css
+++ b/react-app/src/components/MyBackedProjects/MyBackedProjects.css
@@ -13,6 +13,8 @@ background-color: #36d892;
 flex-basis: auto;
 height: 650px;
 width: 540px;
+word-wrap: break-word;   
+overflow-wrap: break-word
 
 }
 
